css/profile.css
/* ... */
.main .card table {
    border: none;
    font-size: 16px;
    height: 270px;
    width: 80%;
}

.edit {
    position: absolute;
    color: #e7e7e8;
    right: 14%;
}

.social-media {
    text-align: center;
    width: 90%;
}

.fa-sm{
    cursor: pointer;
}

.social-media span {
    margin: 0 10px;
}

.fa-facebook:hover {
    color: #2d88ff !important;
}

.fa-twitter:hover {
    color: #1da1f2 !important;
}

.fa-instagram:hover {
    color: #ce2b94 !important;
}

.fa-invision:hover {
    color: #5bffff !important;
}

.fa-github:hover {
    color: #161414 !important;
}

.fa-whatsapp:hover {
    color: #25d366 !important;
}

.fa-snapchat:hover {
    color: #fffb01 !important;
}

/* Media Queries */

/* For tablets and larger phones */
@media screen and (max-width: 768px) {
    .navbar-top {
        height: auto;
        flex-direction: column;
        align-items: center;
    }

    .title {
        padding-left: 0;
        padding-right: 0;
        left: 0;
        text-align: center;
    }

    .navbar-top ul {
        padding: 10px 0;
    }

    .navbar-top ul li {
        float: none;
        display: inline;
    }

    .navbar-top ul li a {
        padding: 10px 12px;
    }

    .sidenav {
        height: auto;
        position: relative;
        width: 100%;
        border-bottom-right-radius: 0;
    }

    .main {
        margin-left: 0;
        width: 100%;
    }

    .edit {
        right: 5%;
    }

    .main .card table {
        width: 100%;
    }

    .social-media {
        width: 100%;
    }
}

/* For phones */
@media screen and (max-width: 480px) {
    .navbar-top {
        height: auto;
        flex-direction: column;
        align-items: center;
    }

    .title {
        font-size: 24px;
        padding-top: 10px;
    }

    .navbar-top ul {
        padding: 5px 0;
    }

    .navbar-top ul li {
        float: none;
        display: inline;
    }

    .navbar-top ul li a {
        padding: 8px 10px;
    }

    .sidenav {
        height: auto;
        position: relative;
        width: 100%;
        border-bottom-right-radius: 0;
        padding: 10px 0;
    }

    .profile img {
        width: 80px;
        height: 80px;
    }

    .name, .job {
        font-size: 16px;
    }

    .url a {
        font-size: 18px;
    }

    .main {
        margin-left: 0;
        width: 100%;
        font-size: 22px;
    }

    .main h2 {
        font-size: 20px;
    }

    .main .card {
        padding: 15px 0 15px 20px;
    }

    .main .card table {
        width: 100%;
    }

    .edit {
        right: 5%;
    }

    .social-media {
        width: 100%;
    }

    .fa-sm {
        margin: 0 5px;
    }
}


.faq {
    max-width: 800px;
    margin: auto;
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    padding: 0px;
    margin-bottom: 60px;
  }
  
  .fa-chevron-up {
    transform: rotate(180deg);
  }
  
  .general {
    text-align: center;
    background: #ffd500ab;
    padding: 23px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
  }
  
  .general h2 {
    font-size: 38px;
    text-align: center;
    color: rgb(168, 54, 2);
    margin-top: 16px;
    font-weight: 700;
  }
  
  .general p {
    margin-top: 15px;
    color: rgb(0, 0, 0);
    font-size: 18px;
    font-weight: 500;
    line-height: 25px;
  }
  
  
  main {
    padding: 20px;
    /* max-width: 800px; */
    margin: 100px auto;
    /* background: #fff; */
    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
    /* border-radius: 10px; */
    /* align-items: center;
      text-align: center; */
    width: 85%;
  }
  
  p {
    font-size: 16px;
    line-height: 18px;
  }
  
  main h2 {
    font-size: 25px;
    text-align: center;
    margin-top: 50px;
    font-weight: 600;
    color: black;
  }
/* ... */

